@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/08/03 14:10:30 minskim Exp $
+$NetBSD: distinfo,v 1.6 2004/09/11 03:36:54 minskim Exp $
 
-SHA1 (teixsl-html-3.1nb2/teixsl-html.zip) = 45f78cf5869d79725a45aae7cfd84d321e906b2c
-Size (teixsl-html-3.1nb2/teixsl-html.zip) = 67949 bytes
+SHA1 (teixsl-html-3.3/teixsl-html.zip) = cd9732d3e941955948757422958fbe247fc9a919
+Size (teixsl-html-3.3/teixsl-html.zip) = 67693 bytes
